<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dip"
            >
            <TextView
                android:text="@string/example_section_heading_1"
                style="@style/ExampleSectionHeading"
                android:paddingTop="10dp" />

            <TextView
                android:id="@+id/example_section_1_example_1"
                android:text="@string/example_section_1_example_1"
                style="@style/Example" />

            <TextView
                android:id="@+id/example_section_1_example_2"
                android:text="@string/example_section_1_example_2"
                style="@style/Example" />

            <TextView
                android:text="@string/example_section_heading_2"
                style="@style/ExampleSectionHeading" />

            <TextView
                android:id="@+id/example_section_2_example_1"
                android:text="@string/example_section_2_example_1"
                style="@style/Example" />

            <TextView
                android:id="@+id/example_section_2_example_2"
                android:text="@string/example_section_2_example_2"
                style="@style/Example" />


            <TextView
                android:text="@string/example_section_heading_3"
                style="@style/ExampleSectionHeading" />

            <TextView
                android:id="@+id/example_section_3_example_1"
                android:text="@string/example_section_3_example_1"
                style="@style/Example" />

            <TextView
                android:id="@+id/example_section_3_example_2"
                android:text="@string/example_section_3_example_2"
                style="@style/Example" />


            <TextView
                android:text="@string/example_section_heading_4"
                style="@style/ExampleSectionHeading" />

            <TextView
                android:id="@+id/example_section_4_example_1"
                android:text="@string/example_section_4_example_1"
                style="@style/Example" />


            <TextView
                android:text="@string/example_section_heading_5"
                style="@style/ExampleSectionHeading" />

            <TextView
                android:id="@+id/example_section_5_example_1"
                android:text="@string/example_section_5_example_1"
                style="@style/Example" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>