<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_gravity="top"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_text"
                android:textColor="@color/text_color"
                android:typeface="serif"
                android:textSize="18dp"
                android:layout_marginTop="15dip"
                />

            <Button
                android:id="@+id/www_button"
                android:layout_width="320dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dip"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/internet"
                android:text="@string/www_button_text"  />

            <Button
                android:id="@+id/email_button"
                android:layout_width="320dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/email"
                android:text="@string/email_address" />

            <TextView android:layout_height="0dip"
                android:layout_width="fill_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/footer"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright_version"
                android:textColor="@color/text_color"
                android:gravity="center"
                android:typeface="serif"
                android:layout_marginTop="10dip"
                android:textSize="10dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>